--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "Memory-efficient binary encoding for TopoJSON using typed arrays",
   "license": "ISC",
   "author": "",
-  "keywords": ["topojson", "geojson", "binary", "typed-array", "geography", "topology", "encoding"],
+  "keywords": [
+    "topojson",
+    "geojson",
+    "binary",
+    "typed-array",
+    "geography",
+    "topology",
+    "encoding"
+  ],
   "type": "module",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
