--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "build": "tsc",
     "clean": "rm -rf lib",
     "serve": "http-server -p 8000 -o example.html",
-    "prepublishOnly": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test tests/*.test.js",
+    "test:watch": "node --test --watch tests/*.test.js",
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "lib"
